# cookie_python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/_/licenses/: Apache-2  BSD-3  GPL-3
{{cookiecutter.project_slug}}/_/vscode/: tasks.json
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
{{cookiecutter.repo_name}}/: README.md
{{cookiecutter.repo_name}}/_/licenses/: BSD-3  MIT
