[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
pytest = "^5.2"
bandit = "^1.6.2"
black = "^19.10b0"
rope = "^0.16.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
